--- a/public/styles.css
+++ b/public/styles.css
@@ -5,6 +5,23 @@ body{
     background: url(https://wallpapercave.com/wp/wp2004258.jpg);
 }
 
+#team {
+    color: black;
+}
+
+#footer{
+    margin-top: auto;
+}
+
+#main-footer{
+    margin: auto;
+    width: auto;
+    padding: 5px;
+    padding-top: 30px;
+    background-color: red;
+    text-align: center;
+}
+
 .member {
     text-align: center;
     padding: 10px;
@@ -276,6 +293,7 @@ a:link {
     flex-wrap: wrap;
     justify-content: left;
 }
+
 /*smaller resolution */
 
 /*Larger Resolution */
